# kicad_ngspice_generation

./: README.md  pyproject.toml
examples/specs/: __init__.py  catalog.py  seeded_layouts.json
mixedsig2cad/: __init__.py  compiled.py  compiler_impl.py  consistency.py  design.py  geometry.py  intent.py  kicad_connectivity.py  kicad_symbols.py  layout.py  layout_compiler.py  models.py  spec.py  symbols.py  topology_layout.py
mixedsig2cad/assets/: examples.kicad_sym
mixedsig2cad/compiler/: __init__.py  finalize.py  patterns.py  strategies.py  topology.py
mixedsig2cad/exporters/: kicad.py  ngspice.py
mixedsig2cad/importers/: __init__.py  kicad_schematic.py  raster_extract.py  raster_observation.py
mixedsig2cad/projections/: __init__.py  kicad.py  kicad_render_validate.py
scripts/: extract_seed_layouts.py  generate_examples.py  validate_examples.py
tests/: test_canonical_pipeline.py  test_geometry_validation.py  test_kicad_connectivity.py  test_static_cmos_layout.py  test_symbol_registry.py
